# openBCI

./: CMakeLists.txt  TGAM_StreamSDK_API_说明.docx  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  report_20260413_175450.txt  stream_sdk_for_pc.cpp  ~$AM_StreamSDK_API_说明.docx
core/: csvlogworker.cpp  csvlogworker.h  databuffer.cpp  databuffer.h  logwbuffer.cpp  logwbuffer.h  logworker.cpp  logworker.h  pictureandalgbuffer.cpp  pictureandalgbuffer.h  serialrawdump.h
device/: serialport.cpp  serialport.h
docs/: CSV只有表头_定时器跨线程修复.md  CSV日志写盘线程示例_CsvLogWorker.md  Qt与Python实时接口方案.md  UI与ThinkGear业务层对接示例.md  UI保存按钮_CSV设置对话框示例.md  UI补充_CSV路径与勾选框_操作说明.md  device_SerialPort完整示例与原理.md  三线程架构设计_采集算法绘图.md  串口十六进制原始数据读取演示.md  串口缓冲与十六进制顺序说明.md  修复CSV空文件_定时器跨线程问题.md  双缓冲区改造方案_基于DataBuffer与LogWorker.md  后期详细方案_低刷新不丢包.md  完整对接_MainWindow与CSV_逐步代码.md  实现示例_脑电CSV与操作TXT分离.md  帧内解析类完整示例.md  硬件联机512Hz测试类示例.md  线程现状与改进建议_参考RealCtrl.md  组帧类设计_下一步怎么做.md  脑电串口解析与缓冲设计教学.md  转换层完整示例_RawToUvProcessor.md
stream_sdk_for_pc/: changetest.cpp  changetest.h  origintest.cpp  origintest.h  stream_sdk_for_pc.cpp  stream_sdk_for_pc.cpp.autosave  stream_sdk_for_pc.h  test_stream_for_pc_change.cpp  test_stream_sdk_for_pc.cpp  threadteast.cpp  threadteast.h
thinkgear/: rawtouvprocessor.cpp  rawtouvprocessor.h  thinkgearframeassembler.cpp  thinkgearframeassembler.h  thinkgearlinktester.cpp  thinkgearlinktester.h  thinkgearpayloadparser.cpp  thinkgearpayloadparser.h
